--- a/crates/ah-client-api/Cargo.toml
+++ b/crates/ah-client-api/Cargo.toml
@@ -7,7 +7,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ah-rest-api-contract = { path = "../ah-rest-api-contract" }
+ah-rest-api-contract = { workspace = true }
 async-trait = { workspace = true }
 thiserror = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
