--- a/crates/ah-command-trace-e2e-tests/Cargo.toml
+++ b/crates/ah-command-trace-e2e-tests/Cargo.toml
@@ -36,8 +36,8 @@ tokio = { version = "1.0", features = [
 ] }
 futures = "0.3"
 libc = "0.2"
-ah-command-trace-proto = { path = "../ah-command-trace-proto" }
-ah-command-trace-server = { path = "../ah-command-trace-server" }
+ah-command-trace-proto = { workspace = true }
+ah-command-trace-server = { workspace = true }
 
 # macOS-specific dependencies
 [target.'cfg(target_os = "macos")'.dependencies]
