--- a/crates/agentfs-backstore-macos/Cargo.toml
+++ b/crates/agentfs-backstore-macos/Cargo.toml
@@ -7,7 +7,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-agentfs-core = { path = "../agentfs-core" }
+agentfs-core = { workspace = true }
 tempfile = "3.0"
 proptest = { version = "1.0", optional = true }
 libc = "0.2"
