--- a/crates/agentfs-fskit-host/Cargo.toml
+++ b/crates/agentfs-fskit-host/Cargo.toml
@@ -8,9 +8,9 @@ edition = "2021"
 
 [dependencies]
 # AgentFS crates
-agentfs-core = { path = "../agentfs-core" }
-agentfs-ffi = { path = "../agentfs-ffi" }
-agentfs-proto = { path = "../agentfs-proto" }
+agentfs-core = { workspace = true }
+agentfs-ffi = { workspace = true }
+agentfs-proto = { workspace = true }
 
 # External dependencies
 serde = { workspace = true, features = ["derive"] }
