--- a/crates/agentfs-fuse-host/Cargo.toml
+++ b/crates/agentfs-fuse-host/Cargo.toml
@@ -7,8 +7,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-agentfs-core = { path = "../agentfs-core" }
-agentfs-proto = { path = "../agentfs-proto" }
+agentfs-core = { workspace = true }
+agentfs-proto = { workspace = true }
 anyhow = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
