--- a/crates/ah-agents/Cargo.toml
+++ b/crates/ah-agents/Cargo.toml
@@ -17,7 +17,7 @@ tracing = { workspace = true }
 anyhow = { workspace = true }
 thiserror = { workspace = true }
 async-trait = "0.1"
-ah-domain-types = { path = "../ah-domain-types" }
+ah-domain-types = { workspace = true }
 
 # Additional dependencies for agent management
 tar = "0.4"
@@ -43,9 +43,9 @@ windows = { version = "0.52", features = ["Win32_Security_Credentials"] }
 
 [dev-dependencies]
 tempfile = "3.8"
-ah-repo = { path = "../ah-repo" }
+ah-repo = { workspace = true }
 reqwest = { version = "0.12", features = ["json"] }
-llm-api-proxy = { path = "../llm-api-proxy" }
+llm-api-proxy = { workspace = true }
 serial_test = "3"
 
 [features]
