--- a/crates/ah-cli/Cargo.toml
+++ b/crates/ah-cli/Cargo.toml
@@ -25,20 +25,20 @@ tracing-subscriber = { workspace = true }
 ratatui = "0.29"
 
 # AH core dependencies
-ah-core = { path = "../ah-core" }
-ah-domain-types = { path = "../ah-domain-types", features = ["clap"] }
-schemars = "0.8"
-ah-logging = { path = "../ah-logging" }
-ah-repo = { path = "../ah-repo" }
-ah-local-db = { path = "../ah-local-db" }
-config-core = { path = "../config-core" }
-ah-config-types = { path = "../ah-config-types" }
-ah-agents = { path = "../ah-agents" }
-ah-recorder = { path = "../ah-recorder" }
-vt100 = { path = "../../vendor/vt100" }
+ah-core = { workspace = true }
+ah-domain-types = { workspace = true, features = ["clap"] }
+ah-logging = { workspace = true }
+ah-repo = { workspace = true }
+ah-local-db = { workspace = true }
+config-core = { workspace = true }
+ah-config-types = { workspace = true }
+ah-agents = { workspace = true }
+ah-recorder = { workspace = true }
+vt100 = { workspace = true }
 crossterm = { workspace = true }
 tempfile = { workspace = true }
 dirs = { workspace = true }
+schemars = "0.8"
 ureq = "2.9"
 which = "6.0"
 
@@ -56,31 +56,29 @@ chrono = { workspace = true }
 uuid = { workspace = true }
 
 # AgentFS dependencies
-agentfs-proto = { path = "../agentfs-proto" }
-ah-fs-snapshots = { path = "../ah-fs-snapshots" }
-ah-fs-snapshots-traits = { path = "../ah-fs-snapshots-traits", features = [
-  "clap",
-] }
+agentfs-proto = { workspace = true }
+ah-fs-snapshots = { workspace = true }
+ah-fs-snapshots-traits = { workspace = true, features = ["clap"] }
 
 # UI and TUI dependencies
-ah-tui = { path = "../ah-tui" }
-ah-mux = { path = "../ah-mux" }
-ah-mux-core = { path = "../ah-mux-core" }
-ah-rest-client = { path = "../ah-rest-client" }
-ah-workflows = { path = "../ah-workflows" }
-tui-testing = { path = "../tui-testing" }
+ah-tui = { workspace = true }
+ah-mux = { workspace = true }
+ah-mux-core = { workspace = true }
+ah-rest-client = { workspace = true }
+ah-workflows = { workspace = true }
+tui-testing = { workspace = true }
 rusqlite = { version = "0.37", features = ["bundled"] }
-sandbox-core = { path = "../sandbox-core", features = [
+sandbox-core = { workspace = true, features = [
   "cgroups",
   "seccomp",
   "net",
   "devices",
 ] }
-sandbox-seccomp = { path = "../sandbox-seccomp" }
+sandbox-seccomp = { workspace = true }
 
 
 # Mock REST client for testing
-ah-rest-mock-client = { path = "../ah-rest-mock-client" }
+ah-rest-mock-client = { workspace = true }
 
 # Multiplexer support
 
@@ -92,13 +90,13 @@ nix = { workspace = true, features = ["fs", "ioctl"] }
 libc = "0.2"
 
 [target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
-ah-fs-snapshots-zfs = { path = "../ah-fs-snapshots-zfs" }
-ah-fs-snapshots-btrfs = { path = "../ah-fs-snapshots-btrfs" }
-ah-fs-snapshots-git = { path = "../ah-fs-snapshots-git" }
+ah-fs-snapshots-zfs = { workspace = true }
+ah-fs-snapshots-btrfs = { workspace = true }
+ah-fs-snapshots-git = { workspace = true }
 
 [target.'cfg(target_os = "macos")'.dependencies]
-ah-sandbox-macos = { path = "../ah-sandbox-macos" }
-ah-macos-launcher = { path = "../ah-macos-launcher" }
+ah-sandbox-macos = { workspace = true }
+ah-macos-launcher = { workspace = true }
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", features = [
@@ -119,7 +117,7 @@ agentfs = ["ah-fs-snapshots/agentfs"]
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 tempfile = { workspace = true }
 tempdir = "0.3"
-tui-testing = { path = "../tui-testing" }
+tui-testing = { workspace = true }
 assert_cmd = "2.0"
 serial_test = "3"
 serde_yaml = "0.9"
