--- a/crates/ah-command-trace-client/Cargo.toml
+++ b/crates/ah-command-trace-client/Cargo.toml
@@ -7,7 +7,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ah-command-trace-proto = { path = "../ah-command-trace-proto" }
+ah-command-trace-proto = { workspace = true }
 anyhow = "1.0"
 thiserror = "1.0"
 libc = "0.2"
