--- a/crates/ah-config-types/Cargo.toml
+++ b/crates/ah-config-types/Cargo.toml
@@ -9,6 +9,6 @@ description = "Distributed, strongly-typed configuration structs for Agent Harbo
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-ah-domain-types = { path = "../ah-domain-types" }
+ah-domain-types = { workspace = true }
 serde.workspace = true
 schemars = { version = "0.8", features = ["preserve_order"] }
