--- a/crates/ah-fs-snapshots-daemon/Cargo.toml
+++ b/crates/ah-fs-snapshots-daemon/Cargo.toml
@@ -17,7 +17,7 @@ ah-logging = { workspace = true }
 anyhow = { workspace = true }
 thiserror = { workspace = true }
 libc = "0.2"
-agentfs-core = { path = "../agentfs-core" }
+agentfs-core = { workspace = true }
 once_cell = "1.19"
 tokio-util = { version = "0.7", features = ["rt"] }
 
