--- a/crates/ah-local-db/Cargo.toml
+++ b/crates/ah-local-db/Cargo.toml
@@ -9,7 +9,7 @@ description = "SQLite database management for local Agent Harbor state"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-ah-domain-types = { path = "../ah-domain-types" }
+ah-domain-types = { workspace = true }
 rusqlite.workspace = true
 serde.workspace = true
 serde_json.workspace = true
