--- a/crates/ah-mux/Cargo.toml
+++ b/crates/ah-mux/Cargo.toml
@@ -9,7 +9,7 @@ description = "High-level AH adapter for terminal multiplexers with tmux, kitty,
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-ah-mux-core = { path = "../ah-mux-core" }
+ah-mux-core = { workspace = true }
 thiserror = "1.0"
 tokio = { workspace = true, features = ["process", "io-util"] }
 regex = "1.0"
