--- a/crates/ah-rest-client/Cargo.toml
+++ b/crates/ah-rest-client/Cargo.toml
@@ -9,9 +9,9 @@ description = "REST API client for agent-harbor service"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-ah-rest-api-contract = { path = "../ah-rest-api-contract" }
-ah-client-api = { path = "../ah-client-api" }
-ah-domain-types = { path = "../ah-domain-types" }
+ah-rest-api-contract = { workspace = true }
+ah-client-api = { workspace = true }
+ah-domain-types = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 reqwest = { version = "0.12", default-features = false, features = [
   "json",
