--- a/crates/llm-api-proxy/Cargo.toml
+++ b/crates/llm-api-proxy/Cargo.toml
@@ -53,7 +53,7 @@ regex = "1.10"
 base64 = "0.22"
 chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4.0", features = ["derive"] }
-ah-scenario-format = { path = "../ah-scenario-format" }
+ah-scenario-format = { workspace = true }
 
 [dev-dependencies]
 tokio-test = "0.4"
