--- a/tests/e2e-shim-b/Cargo.toml
+++ b/tests/e2e-shim-b/Cargo.toml
@@ -7,7 +7,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-stackable-hooks = { path = "../../crates/stackable-hooks" }
+stackable-hooks = { workspace = true }
 libc = "0.2"
 ctor = "0.2"
 
