--- a/tests/e2e-stackable-hooks-b/Cargo.toml
+++ b/tests/e2e-stackable-hooks-b/Cargo.toml
@@ -11,7 +11,7 @@ name = "shim_library_b"
 crate-type = ["cdylib"]
 
 [dependencies]
-stackable-hooks = { path = "../../crates/stackable-hooks" }
+stackable-hooks = { workspace = true }
 libc = "0.2"
 ctor = "0.2"
 tracing = { workspace = true }
